--- a/games.css
+++ b/games.css
@@ -91,6 +91,37 @@ margin-right: 10px;
     width: 600px;
     height: 500px;
 }
+.main-02 {
+    display: flex;
+    margin-left: 250px;
+}
+.gamer1 {
+    color: darkmagenta;
+}
+.main-03 {
+    margin-top: 50px;
+    text-align: right;
+    
+}
+.btn03 {
+    background-color:hotpink;
+    width: 100px;
+    height: 40px;
+    border-radius: 44px;
+    color: white;
+}
+.funny {
+    color:darkmagenta ;
+}
+.funny-videos {
+    text-align: center;
+}
+.videos2 {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
 
 
 
@@ -114,3 +145,8 @@ margin-right: 10px;
     }
 }
 
+@media screen and (max-width:576px) {
+    .main-02 {
+        flex-direction: column;
+    }
+}
