--- a/games.css
+++ b/games.css
@@ -121,6 +121,23 @@ margin-right: 10px;
     gap: 10px;
     justify-content: center;
 }
+.a{
+    width: 300px;
+    height: 350px;
+}
+.b {
+    width: 300px;
+    height: 350px;  
+}
+.c {
+    width: 300px;
+    height: 350px;
+}
+.d {
+    width: 300px;
+    height: 350px;
+}
+
 
 
 
@@ -147,6 +164,11 @@ margin-right: 10px;
 
 @media screen and (max-width:576px) {
     .main-02 {
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:576px) {
+    .videos2 {
         flex-direction: column;
     }
 }
